import_log.txt
SET
psql:totalbet365_pgsql.sql:28: NOTICE:  table "w_api_tokens" does not exist, skipping
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
INSERT 0 17
psql:totalbet365_pgsql.sql:168: NOTICE:  table "w_categories" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 31
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:222: NOTICE:  table "w_failed_jobs" does not exist, skipping
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:274: NOTICE:  table "w_fish_bank" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 2
psql:totalbet365_pgsql.sql:300: NOTICE:  table "w_game_bank" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 2
psql:totalbet365_pgsql.sql:329: NOTICE:  table "w_game_categories" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 1165
psql:totalbet365_pgsql.sql:354: NOTICE:  table "w_game_log" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 127
psql:totalbet365_pgsql.sql:383: NOTICE:  table "w_games" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 582
INSERT 0 581
INSERT 0 577
INSERT 0 578
INSERT 0 587
INSERT 0 371
psql:totalbet365_pgsql.sql:443: NOTICE:  table "w_happyhours" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:470: NOTICE:  table "w_info" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:498: NOTICE:  table "w_info_shop" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:522: NOTICE:  table "w_invites" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 2
psql:totalbet365_pgsql.sql:553: NOTICE:  table "w_jobs" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 375
psql:totalbet365_pgsql.sql:582: NOTICE:  table "w_jpg" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 20
psql:totalbet365_pgsql.sql:613: NOTICE:  table "w_messages" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 10
psql:totalbet365_pgsql.sql:641: NOTICE:  table "w_notifications" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:667: NOTICE:  table "w_open_shift" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 5
psql:totalbet365_pgsql.sql:705: NOTICE:  table "w_open_shift_temp" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:731: NOTICE:  table "w_password_resets" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 3
psql:totalbet365_pgsql.sql:755: NOTICE:  table "w_pay_tickets" does not exist, skipping
DROP TABLE
psql:totalbet365_pgsql.sql:767: ERROR:  syntax error at or near "COMMENT"
LINE 6:   "ticket_status" INTEGER NOT NULL DEFAULT '0' COMMENT '0 =>...
                                                       ^
psql:totalbet365_pgsql.sql:783: NOTICE:  table "w_payment_settings" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 21
psql:totalbet365_pgsql.sql:810: NOTICE:  table "w_payments" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 109
psql:totalbet365_pgsql.sql:841: NOTICE:  table "w_permission_role" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 281
psql:totalbet365_pgsql.sql:868: NOTICE:  table "w_permission_user" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:894: NOTICE:  table "w_permissions" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 73
psql:totalbet365_pgsql.sql:926: NOTICE:  table "w_pincodes" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:954: NOTICE:  table "w_progress" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 60
psql:totalbet365_pgsql.sql:992: NOTICE:  table "w_progress_users" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 13
psql:totalbet365_pgsql.sql:1020: NOTICE:  table "w_quick_shops" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:1043: NOTICE:  table "w_rewards" does not exist, skipping
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:1076: NOTICE:  table "w_role_user" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 54
psql:totalbet365_pgsql.sql:1103: NOTICE:  table "w_roles" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 6
psql:totalbet365_pgsql.sql:1133: NOTICE:  table "w_rules" does not exist, skipping
DROP TABLE
CREATE TABLE
INSERT 0 5
psql:totalbet365_pgsql.sql:1163: NOTICE:  table "w_securities" does not exist, skipping
DROP TABLE
CREATE TABLE
DROP TABLE
CREATE TABLE
psql:totalbet365_pgsql.sql:1226: error: invalid command \"rm
psql:totalbet365_pgsql.sql:1227: error: invalid command \')','YTozOntzOjY6Il90b2tlbiI7czo0MDoiVnhZSTZYUVZCbGd6TUVOZ0xtbkZOa2hobmtBU0lRQ1d1TE5GMjFOTiI7czo5OiJfcHJldmlvdXMiO2E6MTp7czozOiJ1cmwiO3M6MjU6Imh0dHA6Ly81LjE2MS4xMDguMTQwLz9pZD0iO31zOjY6Il9mbGFzaCI7YToyOntzOjM6Im9sZCI7YTowOnt9czozOiJuZXciO2E6MDp7fX19',1663421309,'United
psql:totalbet365_pgsql.sql:1608: error: invalid command \",
psql:totalbet365_pgsql.sql:2250: error: invalid command \"StoryOfAlexandrEGTCards
psql:totalbet365_pgsql.sql:2380: ERROR:  syntax error at or near "Mozilla"
LINE 1: ...YuKnrTPxU60XPKuAsOB4Cw01',NULL,'43.156.25.237','\'Mozilla/5....
                                                             ^
